# busy-bee-be/infrastructure/db/sqlcgen/models.go
@@ -57,6 +57,7 @@ type Meeting struct {
 	SummarySections    []byte
 	SourceUrl          string
 	Tags               []string
+	Language           string
 }
 
 type PushSubscription struct {
